--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_04/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Pandas_I.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_04/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Pandas_I.ipynb
@@ -61,11 +61,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -207,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +211,7 @@
      "text": [
       "Up\n",
       "La pelicula de menor recaudacion es Up que se lanzó en el 2006\n",
-      "Ninguna película ha tenido ese número de espectadores.\n",
+      "La película con más de 1000 millones de recaudación y menos de 75 millones de espectadores es 'Toy Story 4'.\n",
       "Gonzalo tenía 21 cuando fue a ver el estreno de Toy Story 4\n",
       "Gonzalo tenía 24 cuando fue a ver el estreno de Los Incríbles 2\n",
       "Gonzalo tenía 22 cuando fue a ver el estreno de Buscando a Dory\n",
@@ -238,7 +233,7 @@
     "print(f\"La pelicula de menor recaudacion es {pelicula_menos_recaudacion} que se lanzó en el {agno_menor_recaudacion}\")\n",
     "\n",
     "# PELI CON MÁS DE 1000 MILL Y MENOS 75 MILL ESPECTADORES\n",
-    "pelicula_concreta = serie_espectadores[(serie_espectadores > 1000) & (serie_espectadores < 75)]\n",
+    "pelicula_concreta = serie_espectadores[(serie_recaudaciones > 1000) & (serie_espectadores < 75)]\n",
     "if not pelicula_concreta.empty: #lista vacía porque no hay película que cumpla con criterio propuesto\n",
     "    pelicula_concreta_nombre = pelicula_concreta.index[0]\n",
     "    print(f\"La película con más de 1000 millones de recaudación y menos de 75 millones de espectadores es '{pelicula_concreta_nombre}'.\")\n",
@@ -449,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +503,7 @@
        "Up                           735                2009                   54.34"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +603,7 @@
        "Inside Out                857                2015                   68.27"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +688,7 @@
        "Inside Out                857                2015                   68.27"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,6 +696,35 @@
    "source": [
     "df_65 = df[df[\"Número de Espectadores\"] > 65]\n",
     "df_65"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Los Increíbles 2        True\n",
+       "Toy Story 4             True\n",
+       "Toy Story 3             True\n",
+       "Buscando a Dory         True\n",
+       "Inside Out              True\n",
+       "Coco                   False\n",
+       "Monsters University    False\n",
+       "Up                     False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_condicion = (df[\"Recaudación\"] > 800) & (df[\"Número de Espectadores\"] > 65)\n",
+    "df_condicion"
    ]
   },
   {
@@ -712,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +849,7 @@
        "Up                                13.525948  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -958,13 +982,13 @@
        "Toy Story 4                       14.323855  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = df.sort_values(by = \"Año de Lanzamiento\")\n",
+    "df = df.sort_values(by = \"Año de Lanzamiento\") #si no se iguala a una variable y se pone inplace = True se modifica el dataframe\n",
     "df"
    ]
   },
@@ -977,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1114,7 @@
        "Up                                13.525948  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1125,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1219,7 +1243,7 @@
        "Up                          2006            735         54.34"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1238,7 +1262,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Título</th>\n",
+       "      <th>Recaudación</th>\n",
+       "      <th>Número de Espectadores</th>\n",
+       "      <th>Ingreso por espectador</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Año de Lanzamiento</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2009</th>\n",
+       "      <td>Up</td>\n",
+       "      <td>735</td>\n",
+       "      <td>54.34</td>\n",
+       "      <td>13.525948</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>Toy Story 3</td>\n",
+       "      <td>1067</td>\n",
+       "      <td>81.35</td>\n",
+       "      <td>13.116165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013</th>\n",
+       "      <td>Monsters University</td>\n",
+       "      <td>754</td>\n",
+       "      <td>54.74</td>\n",
+       "      <td>13.774205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015</th>\n",
+       "      <td>Inside Out</td>\n",
+       "      <td>857</td>\n",
+       "      <td>68.27</td>\n",
+       "      <td>12.553098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016</th>\n",
+       "      <td>Buscando a Dory</td>\n",
+       "      <td>1029</td>\n",
+       "      <td>76.72</td>\n",
+       "      <td>13.412409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017</th>\n",
+       "      <td>Coco</td>\n",
+       "      <td>807</td>\n",
+       "      <td>62.75</td>\n",
+       "      <td>12.860558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018</th>\n",
+       "      <td>Los Increíbles 2</td>\n",
+       "      <td>1242</td>\n",
+       "      <td>93.42</td>\n",
+       "      <td>13.294798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019</th>\n",
+       "      <td>Toy Story 4</td>\n",
+       "      <td>1073</td>\n",
+       "      <td>74.91</td>\n",
+       "      <td>14.323855</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 Título  Recaudación  Número de Espectadores  \\\n",
+       "Año de Lanzamiento                                                             \n",
+       "2009                                 Up          735                   54.34   \n",
+       "2010                        Toy Story 3         1067                   81.35   \n",
+       "2013                Monsters University          754                   54.74   \n",
+       "2015                         Inside Out          857                   68.27   \n",
+       "2016                    Buscando a Dory         1029                   76.72   \n",
+       "2017                               Coco          807                   62.75   \n",
+       "2018                   Los Increíbles 2         1242                   93.42   \n",
+       "2019                        Toy Story 4         1073                   74.91   \n",
+       "\n",
+       "                    Ingreso por espectador  \n",
+       "Año de Lanzamiento                          \n",
+       "2009                             13.525948  \n",
+       "2010                             13.116165  \n",
+       "2013                             13.774205  \n",
+       "2015                             12.553098  \n",
+       "2016                             13.412409  \n",
+       "2017                             12.860558  \n",
+       "2018                             13.294798  \n",
+       "2019                             14.323855  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.reset_index().set_index(\"Año de Lanzamiento\"). rename(columns = {\"index\": \"Título\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1507,7 @@
        "2009                             13.525948  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
