--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_04/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Pandas_II.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_04/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Pandas_II.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "max    20029.000000  1721.00000"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "(1000, 7)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "27"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Id_vuelo\n",
+       "Air_PaGi_10737    False\n",
+       "Fly_BaRo_10737    False\n",
+       "Tab_GiLo_11380     True\n",
+       "Mol_PaCi_10737    False\n",
+       "Tab_CiRo_10747    False\n",
+       "                  ...  \n",
+       "Pam_LoNu_10747    False\n",
+       "Mol_MeLo_10747    False\n",
+       "Mol_BaPa_10747    False\n",
+       "Air_CaCi_10747    False\n",
+       "Air_PaCi_10737    False\n",
+       "Length: 1000, dtype: bool"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_viajes_aereos.duplicated(keep = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +521,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +554,7 @@
        "Name: count, Length: 704, dtype: int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +586,7 @@
        "Name: count, Length: 117, dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +795,7 @@
        "[1000 rows x 7 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -812,9 +844,13 @@
        "      <th>avion</th>\n",
        "      <th>consumo_kg</th>\n",
        "      <th>duracion</th>\n",
+       "      <th>Clasificacion</th>\n",
+       "      <th>IC</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Id_vuelo</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -832,8 +868,10 @@
        "      <td>Bali</td>\n",
        "      <td>13058.0</td>\n",
        "      <td>Boeing 737</td>\n",
-       "      <td>33990.18292800001</td>\n",
+       "      <td>33990.182928</td>\n",
        "      <td>1191.0</td>\n",
+       "      <td>Larga Distancia (LD)</td>\n",
+       "      <td>2.603016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Tab_LoCi_11380</th>\n",
@@ -842,8 +880,10 @@
        "      <td>Cincinnati</td>\n",
        "      <td>6284.0</td>\n",
        "      <td>Airbus A380</td>\n",
-       "      <td>78454.48320000002</td>\n",
+       "      <td>78454.483200</td>\n",
        "      <td>438.0</td>\n",
+       "      <td>Media Distancia (MD)</td>\n",
+       "      <td>12.484800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Pam_LoNu_10747</th>\n",
@@ -852,8 +892,10 @@
        "      <td>Nueva York</td>\n",
        "      <td>5566.0</td>\n",
        "      <td>Boeing 747</td>\n",
-       "      <td>62300,238</td>\n",
+       "      <td>62300.238000</td>\n",
        "      <td>391.0</td>\n",
+       "      <td>Media Distancia (MD)</td>\n",
+       "      <td>11.193000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Mol_BaPa_10747</th>\n",
@@ -862,8 +904,10 @@
        "      <td>París</td>\n",
        "      <td>11980.0</td>\n",
        "      <td>Boeing 747</td>\n",
-       "      <td>128983.868</td>\n",
+       "      <td>128983.868000</td>\n",
        "      <td>818.0</td>\n",
+       "      <td>Larga Distancia (LD)</td>\n",
+       "      <td>10.766600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Air_PaCi_10737</th>\n",
@@ -872,8 +916,10 @@
        "      <td>Cincinnati</td>\n",
        "      <td>6370.0</td>\n",
        "      <td>Boeing 737</td>\n",
-       "      <td>16872,219</td>\n",
+       "      <td>16872.219000</td>\n",
        "      <td>503.0</td>\n",
+       "      <td>Media Distancia (MD)</td>\n",
+       "      <td>2.648700</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -888,16 +934,16 @@
        "Mol_BaPa_10747  MoldaviAir       Bali       París    11980.0   Boeing 747   \n",
        "Air_PaCi_10737      Airnar      París  Cincinnati     6370.0   Boeing 737   \n",
        "\n",
-       "                       consumo_kg  duracion  \n",
-       "Id_vuelo                                     \n",
-       "Fly_BaBa_10737  33990.18292800001    1191.0  \n",
-       "Tab_LoCi_11380  78454.48320000002     438.0  \n",
-       "Pam_LoNu_10747          62300,238     391.0  \n",
-       "Mol_BaPa_10747         128983.868     818.0  \n",
-       "Air_PaCi_10737          16872,219     503.0  "
+       "                   consumo_kg  duracion         Clasificacion         IC  \n",
+       "Id_vuelo                                                                  \n",
+       "Fly_BaBa_10737   33990.182928    1191.0  Larga Distancia (LD)   2.603016  \n",
+       "Tab_LoCi_11380   78454.483200     438.0  Media Distancia (MD)  12.484800  \n",
+       "Pam_LoNu_10747   62300.238000     391.0  Media Distancia (MD)  11.193000  \n",
+       "Mol_BaPa_10747  128983.868000     818.0  Larga Distancia (LD)  10.766600  \n",
+       "Air_PaCi_10737   16872.219000     503.0  Media Distancia (MD)   2.648700  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1227,7 @@
        "Air_PaCi_10737   16872.219000     503.0  Media Distancia (MD)  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1300,7 @@
        "'\\nfor compania in df_viajes_aereos[\"Aircompany\"].unique():\\n    es_compania = df_viajes_aereos[\"Aircompany\"] == compania\\n    print(f\"Para la compañía {compania}:\")\\n    for avion in df_viajes_aereos[\"avion\"].unique():\\n        es_avion = df_viajes_aereos[\"avion\"] == avion\\n        consumo = df_viajes_aereos.loc[es_compania & es_avion,\"consumo_kg\"].mean()\\n        print(f\"Tipo <{avion}> consumo medio por vuelo <{consumo:.2f}>\")\\n\\n'"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1296,7 +1342,7 @@
        "Name: consumo_kg, dtype: float64"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1374,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1340,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1447,7 @@
        "París       128983.868000"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1420,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1517,7 @@
        "París       Mol_BaPa_10747"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1497,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1570,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1578,7 +1624,7 @@
      "evalue": "invalid syntax (959146445.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[80], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    df_final = <tu_dataframe>.merge(df_ingresos, left_index = True, right_on = \"Id_vuelo\", how = \"left\")\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[36], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    df_final = <tu_dataframe>.merge(df_ingresos, left_index = True, right_on = \"Id_vuelo\", how = \"left\")\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
