--- a/03_Analisis_de_Datos/Sprint_05/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Ficheros.ipynb
+++ b/03_Analisis_de_Datos/Sprint_05/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Ficheros.ipynb
@@ -45,9 +45,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "city_sales.xlsx\n",
+      "mbox.txt\n",
+      "OptaF24.xml\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -66,10 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fichero_texto = (\"./data/mbox.txt\")\n",
+    "fichero_excel = (\"./data/city_sales.xlsx\")\n",
+    "fichero_xml = (\"./data/OptaF24.xml\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,10 +108,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df_excel = pd.read_excel(fichero_excel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 0 entries\n",
+      "Empty DataFrame\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_excel.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,10 +145,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#df_excel.rename(columns={\"primera columna\": \"nuevo_nombre\"}, inplace=True)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,10 +161,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 0 entries\n",
+      "Empty DataFrame\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_excel.info()\n",
+    "#value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,10 +251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "diccionario_texto = {\"from\": [],\n",
+    "                     \"to\": [],\n",
+    "                     \"is_spam\": [],\n",
+    "                     \"conficende\": []\n",
+    "                     }"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -399,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
