--- a/03_Analisis_de_Datos/Sprint_05/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Ficheros.ipynb
+++ b/03_Analisis_de_Datos/Sprint_05/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Ficheros.ipynb
@@ -685,7 +685,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#df_excel.to_excel(\"data/city_sales_clean.xlsx\", sheet_name = \"Clean_Data\", index = False)"
+   ]
   },
   {
    "cell_type": "code",
@@ -22589,7 +22591,12 @@
    "source": [
     "games = tree.findall(\"Games\")\n",
     "for game in games:\n",
-    "    print(\"Atributo\", game.find(\"Event\"))\n"
+    "    print(\"Atributo\", game.find(\"Event\"))\n",
+    "\n",
+    "# nodo = ejer_raiz.find(\"Game\")\n",
+    "# evento = nodo.find(\"Event\")\n",
+    "# evento.atrib\n",
+    "# y ejecutar\n"
    ]
   },
   {
