--- a/03_Analisis_de_Datos/Sprint_07/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Univariante.ipynb
+++ b/03_Analisis_de_Datos/Sprint_07/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Univariante.ipynb
@@ -1163,11 +1163,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "¿Qué vemos? "
+   ]
   }
  ],
  "metadata": {
