--- a/03_Analisis_de_Datos/Sprint_06/Team_Challenge/Parte_II_Modelo_BD.ipynb
+++ b/03_Analisis_de_Datos/Sprint_06/Team_Challenge/Parte_II_Modelo_BD.ipynb
@@ -94,9 +94,61 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "query = \"\"\"\n",
+    "CREATE TABLE FACTURAS (\n",
+    "    Id_factura VARCHAR(12) PRIMARY KEY,\n",
+    "    Id_proveedor VARCHAR(6),\n",
+    "    Id_producto VARCHAR(3),\n",
+    "    Precio FLOAT,\n",
+    "    Cantidad INTEGER,\n",
+    "    Fecha DATE,\n",
+    "    Dirección_fiscal VARCHAR(120),\n",
+    "    Ciudad VARCHAR(40),\n",
+    "    Provincia VARCHAR(40),\n",
+    "    Entregado BOOL,\n",
+    "    Total_factura FLOAT,\n",
+    "    FOREIGN KEY (Id_proveedor) REFERENCES PROVEEDOR(Id_proveedor)\n",
+    "    FOREIGN KEY (Id_producto) REFERENCES PRODUCTOS(Id_producto)\n",
+    ")\n",
+    "\"\"\"\n",
+    "cursor.execute(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "datos_facturas = [\n",
+    "  \n",
+    "(1, 19.99, 1, '2024-03-20', 'Calle Sierpes, 4', 'Sevilla', 'Sevilla', True, 19.99, 1, 1),\n",
+    "(2, 5.99, 3, '2024-03-02', 'Calle Deportes, 123', 'Barcelona', 'Barcelona', True, 17.97, 1, 5),\n",
+    "(3, 19.99, 2, '2024-03-20', 'Calle Deportes, 123', 'Barcelona', 'Barcelona', True, 39.98, 1, 1),\n",
+    "(4, 14.99, 3, '2024-03-19', 'Avenida del Deporte, 456', 'Madrid', 'Comunidad de Madrid', False, 44.97, 2, 7),\n",
+    "(5, 209.99, 1, '2024-03-18', 'Calle Fitness, 789', 'Valencia', 'Valencia', True, 209.99, 3, 3),\n",
+    "(6, 1599.99, 1, '2024-03-17', 'Carrera Extrema, 101', 'Tarragona', 'Barcelona', True, 1599.99, 4, 4),\n",
+    "(7, 5.99, 2, '2024-03-16', 'Paseo del Deporte, 555', 'Oviedo', 'Principado de Asturias', False, 11.98, 5, 5),\n",
+    "(8, 109.99, 1, '2024-03-15', 'Plaza Deportiva, 222', 'Plasencia', 'Cáceres', True, 109.99, 6, 6),\n",
+    "(9, 14.99, 3, '2024-03-14', 'Avenida de la Aventura, 333', 'Leganés', 'Comunidad de Madrid', True, 44.97, 7, 7),\n",
+    "(10, 39.99, 1, '2024-03-13', 'Calle Total, 444', 'Novelda', 'Alicante', False, 39.99, 8, 8),\n",
+    "(11, 89.99, 2, '2024-03-12', 'Calle Deportes, 123', 'Barcelona', 'Barcelona', True, 179.98, 1, 9),\n",
+    "(12, 249.99, 1, '2024-03-11', 'Avenida del Deporte, 456', 'Madrid', 'Comunidad de Madrid', False, 249.99, 2, 10)\n",
+    "]\n",
+    "\n",
+    "\n",
+    "\n",
+    "insert_query_facturas = \"INSERT INTO FACTURAS (Id_factura, Precio, Cantidad, Fecha, Dirección_fiscal, Ciudad, Provincia, Entregado, Total_factura, Id_proveedor, Id_producto) VALUES (?,?,?,?,?,?,?,?,?,?,?)\"\n",
+    "\n",
+    "cursor.executemany(insert_query_facturas, datos_facturas)\n",
+    "conexion.commit()"
+   ]
   }
  ],
  "metadata": {
