modif de fechas

--- a/03_Analisis_de_Datos/EDA/0-Proyecto_EDA.ipynb
+++ b/03_Analisis_de_Datos/EDA/0-Proyecto_EDA.ipynb
@@ -101,7 +101,7 @@
     "    2. **Directamente ir a páginas de datos abiertos y escoger un dataset de tu interés**. Si no tienes clara la temática puedes buscar en alguno de los enlaces de datos (recomendable Kaggle) y escoger un tema que te motive.\n",
     "\n",
     "2. Obtención de datos. ¿Puedes llevar a cabo el proyecto con estos datos?\n",
-    "3. Define tu hipótesis. ¿Qué piensas que puedes analizar de estos datos? ¿Qué vas a poder resolver? ¿Cómo lo vas a llevar a cabo? (**Fecha límite Viernes 23**)\n",
+    "3. Define tu hipótesis. ¿Qué piensas que puedes analizar de estos datos? ¿Qué vas a poder resolver? ¿Cómo lo vas a llevar a cabo? (**Fecha límite Viernes 05 de abril**)\n",
     "4. Preprocesado: obtén todos los datos de las diferentes fuentes que hayas utilizado, juntalos y ponlos en un formato entendible.\n",
     "5. Limpia los datos: transformaciones, duplicados, missings, columnas inútiles...\n",
     "6. Exploratorio: obtén todos los estadísticos y gráficos que necesites para entender bien tu dataset y apoyar tus argumentos.\n",
